--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,8 +35,7 @@ aliases:
   - &docker-login
     name: Docker login
     command: |
-      echo 'export GCLOUD_SERVICE_KEY="$GCLOUD_SERVICE_KEY"' >> $BASH_ENV
-      /tools/docker_login.sh
+      docker login -u _json_key --password-stdin https://eu.gcr.io <<< "${GCLOUD_SERVICE_KEY}"
 
   - &bump-versions
     name: Bump version in pom file
