--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -285,7 +285,7 @@ jobs:
           at: .
       - run: *docker-login
       - clair/scan:
-          image_file: "./gcr.image.version"
+          image_file: "project/gcr.image.version"
       - run: *read-container-vulnerability-scan-report
       - slack/status:
           fail_only: "true"
