--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -309,7 +309,7 @@ workflows:
           name: build-release
           context: dev
       - owasp/maven_owasp_dependency_check:
-          executor: java-11
+          executor: entur-cci-toolbox
           context: org-carbon
           settings_file: /tools/m2/settings.xml
           post-steps:
