--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -194,156 +194,4 @@ jobs:
   build:
     executor: cci-toolbox-java11
     steps:
-      - checkout
-      - restore_cache:
-          key: dep-cache-{{ checksum "pom.xml" }}
-      - run: mvn org.apache.maven.plugins:maven-dependency-plugin:3.1.0:go-offline -s /tools/m2/settings.xml
-      - save_cache:
-          paths:
-            - ~/.m2
-          key: dep-cache-{{ checksum "pom.xml" }}
-      # Cannot use -o because of snapshot dependencies.
-      - run: *get-version-from-pom
-      - run: mvn install -s /tools/m2/settings.xml
-      - run: *save-test-results
-      - store_test_results:
-          path: ~/reports
-      - store_artifacts:
-          path: ~/reports
-      - persist_to_workspace:
-          root: ~/project
-          paths:
-            - target
-            - pom.xml
-            - .circleci
-            - helm/*/
-            - ./mvn_version
-      - slack-status
-  publish-docker:
-    executor: cci-toolbox-java11
-    steps:
-      - attach_workspace:
-          at: ~/project
-      - restore_cache:
-          key: dep-cache-{{ checksum "pom.xml" }}
-      - save_cache:
-          paths:
-            - ~/.m2
-          key: dep-cache-{{ checksum "pom.xml" }}
-      - setup_remote_docker:
-          docker_layer_caching: true
-      - run: *GCP-auth
-      - run: *docker-login
-      - run: *get-mvn-version-from-file
-      - run:
-          name: Docker build, save and push
-          command: mvn docker:build docker:push -s /tools/m2/settings.xml
-
-  prepare-next-release:
-    executor: cci-toolbox-java11
-
-    steps:
-      - checkout
-      - restore_cache:
-          key: dep-cache-{{ checksum "pom.xml" }}
-      - attach_workspace:
-          at: ~/project
-      - add_ssh_keys:
-          fingerprints:
-            - $SSH_FINGERPRINT
-      - run: *get-mvn-version-from-file
-      - run: *bump-versions
-      - run: *git-push-next-version-release
-      - slack-status
-
-  deploy:
-    executor: entur-cci-toolbox
-
-    steps:
-      - checkout
-      - attach_workspace:
-          at: .
-      - run: *GCP-auth
-      - helm/install-helm-chart:
-          chart: ./helm/$CIRCLE_PROJECT_REPONAME
-          namespace: $NAMESPACE
-          release-name: $CIRCLE_PROJECT_REPONAME
-      - run:
-          name: Deployed helm chart
-          command: cat ./helm/$CIRCLE_PROJECT_REPONAME/Chart.yaml
-      - run: *get-mvn-version-from-file
-      - run: *tag-successful-deployment
-      - slack-status
-
-  slack-approval:
-    executor: slack/alpine
-    steps:
-      - attach_workspace:
-          at: .
-      - run: *get-mvn-version-from-file
-      - slack/approval:
-          webhook: *team-ror-releases-slackhook
-          message: *deploy-payload
-
-  container_vulnerability_scan:
-    executor: clair/default
-    steps:
-      - checkout
-      - attach_workspace:
-          at: .
-      - run: *docker-login
-      - clair/scan:
-          image_file: "gcr.image.version"
-      - run: *read-container-vulnerability-scan-report
-      - slack/status:
-          fail_only: "true"
-          failure_message: "Docker image contains new and/or unapproved vulnerabilities: $CONTAINER_VULNERABILITES"
-          webhook: *team-ror-circleci-slackhook
-
-workflows:
-  version: 2.1
-  release:
-    jobs:
-      - build:
-          name: build-release
-          context: dev
-          post-steps:
-            - read-owasp-report
-      - publish-docker:
-          context: dev
-          requires:
-            - build-release
-          filters:
-            branches:
-              only: master
-          post-steps:
-            - save-image-name:
-                image-version: release-$MVN_VERSION
-            - slack-status
-      - container_vulnerability_scan:
-          context: dev
-          requires:
-            - publish-docker
-      - prepare-next-release:
-          context: dev
-          requires:
-            - publish-docker
-      - deploy:
-          name: deploy-dev-release
-          context: dev
-          requires:
-            - prepare-next-release
-      - slack-approval:
-          name: staging-deploy-message-release
-          context: stage
-          requires:
-            - deploy-dev-release
-      - approve-staging-release:
-          type: approval
-          requires:
-            - staging-deploy-message-release
-      - deploy:
-          name: deploy-staging-release
-          context: stage
-          requires:
-            - approve-staging-release
+      - run: echo $JFROG_USER
