--- a/helm/ukur-demo/templates/ingress.yaml
+++ b/helm/ukur-demo/templates/ingress.yaml
@@ -20,7 +20,7 @@ spec:
     - host: {{ .Values.app }}-{{ .Values.api }}-{{ .Release.Namespace }}.dev.entur.io
     {{- else if eq .Release.Namespace "staging" }}
     - host: {{ .Values.app }}-{{ .Values.api }}-{{ .Release.Namespace }}.staging.entur.io
-    {{- else if eq .Release.Namespace "staging" }}
+    {{- else if eq .Release.Namespace "production" }}
     - host: {{ .Values.app }}-{{ .Values.api }}-{{ .Release.Namespace }}.entur.io
     {{- end }}
       http:
