test sonar token

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
            -Dsonar.organization=c97wdh7gfp72 \
            -Dsonar.projectName=${CIRCLE_PROJECT_REPONAME} \
            -Dsonar.host.url=https://sonarcloud.io \
-           -Dsonar.login=5ca4b44b505eee3b2e2b65fe206fc30338c24d33
+           -Dsonar.login=${SONAR_PASSWORD}
 
 #    - run:
 #        name: Save test results
