--- a/pom.xml
+++ b/pom.xml
@@ -37,8 +37,8 @@
         <javax.activation.version>1.2.0</javax.activation.version>
         <maven.compiler.plugin.version>3.8.0</maven.compiler.plugin.version>
         <docker.maven.plugin.version>0.30.0</docker.maven.plugin.version>
-        <docker.from>eu.gcr.io/carbon-1287/openjdk11-base-image</docker.from>
-        <fabric8.dockerUser>carbon-1287/</fabric8.dockerUser>
+        <docker.from>eu.gcr.io/entur-system-1287/openjdk11-base-image</docker.from>
+        <fabric8.dockerUser>entur-system-1287/</fabric8.dockerUser>
         <docker.image>eu.gcr.io/${fabric8.dockerUser}${project.artifactId}:release-${project.version}</docker.image>
         <docker.cleanup>none</docker.cleanup>
     </properties>
