--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ executors:
       - image: eu.gcr.io/entur-system-1287/circleci-toolbox-image-java11
         auth:
           username: _json_key
-          password: $GCLOUD_SERVICE_KEY
+          password: $DOCKER_PASSWORD
     environment:
       DEBIAN_FRONTEND: "noninteractive"
 aliases:
@@ -34,7 +34,7 @@ aliases:
 
   - &docker-login
     name: Login with docker on gcloud
-    command: docker login -u _json_key -p "${GCLOUD_SERVICE_KEY}" https://eu.gcr.io
+    command: docker login -u _json_key -p "${DOCKER_PASSWORD}" https://eu.gcr.io
   - &bump-versions
     name: Bump version in pom file
     command: |
